# aws-sdk-rust-sso-credentials

./: Cargo.toml  LICENSE  README.md
src/: main.rs  sso.rs
