[package]
name = "aws-sdk-rust-sso-credentials"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10", features = [ "full" ] }
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3"
chrono = { version="0.4", features = ["serde"] }
hex = "0.4"
sha-1 = "0.9"
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-types" }
aws-auth = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-auth" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-config" }
aws-sdk-sso = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-sdk-sso" }
aws-sdk-sts = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-sdk-sts" }
